<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DealActivity">

    <EditText
        android:id="@+id/textView_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_margin_standard"
        android:layout_marginTop="@dimen/dimen_margin_large"
        android:layout_marginEnd="@dimen/dimen_margin_standard"
        android:gravity="start|top"
        android:hint="@string/text_title_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_margin_standard"
        android:layout_marginTop="@dimen/dimen_margin_standard"
        android:layout_marginEnd="@dimen/dimen_margin_standard"
        android:gravity="start|top"
        android:hint="@string/text_price_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <EditText
        android:id="@+id/textView_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_margin_standard"
        android:layout_marginTop="@dimen/dimen_margin_standard"
        android:layout_marginEnd="@dimen/dimen_margin_standard"
        android:gravity="start|top"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/text_description_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_price" />

    <Button
        android:id="@+id/button_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_margin_standard"
        android:layout_marginLeft="@dimen/dimen_margin_standard"
        android:layout_marginTop="@dimen/dimen_margin_standard"
        android:layout_marginEnd="@dimen/dimen_margin_standard"
        android:layout_marginRight="@dimen/dimen_margin_standard"
        android:text="@string/text_upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_description" />

    <ImageView
        android:id="@+id/imageView_deal_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_margin_standard"
        android:layout_marginLeft="@dimen/dimen_margin_standard"
        android:layout_marginTop="@dimen/dimen_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_image"
        app:srcCompat="@android:color/transparent" />
</androidx.constraintlayout.widget.ConstraintLayout>