<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/text_communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_add_new"
                android:enabled="false"
                android:icon="@drawable/ic_add_box_black_24dp"
                android:title="@string/text_add_new_travel_deal" />
        </menu>
    </item>
    <item android:title="@string/text_profile">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_account_box_black_24dp"
                android:title="@string/text_logout" />
        </menu>

    </item>

</menu>
