<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_trade_deals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dimen_margin_standard"
        android:layout_marginLeft="@dimen/dimen_margin_standard"
        android:layout_marginTop="@dimen/dimen_margin_standard"
        android:layout_marginEnd="@dimen/dimen_margin_standard"
        android:layout_marginRight="@dimen/dimen_margin_standard"
        android:layout_marginBottom="@dimen/dimen_margin_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/item_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>